--- a/src/client/view/doctor/EditSampleView.fxml
+++ b/src/client/view/doctor/EditSampleView.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.EditSampleController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.EditSampleViewController">
    <children>
       <Label layoutX="256.0" layoutY="35.0" text="Sample">
          <font>
