--- a/src/client/view/manager_view/AddEditEmployeeView.fxml
+++ b/src/client/view/manager_view/AddEditEmployeeView.fxml
@@ -4,35 +4,45 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.manager_view.AddEditEmployeeViewController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #90a4ae;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.manager_view.AddEditEmployeeViewController">
    <children>
-      <Button layoutX="530.0" layoutY="355.0" mnemonicParsing="false" onAction="#onSaveButton" text="Save" />
-      <Button layoutX="466.0" layoutY="355.0" mnemonicParsing="false" onAction="#onClearButton" text="Clear" />
-      <Button layoutX="22.0" layoutY="361.0" mnemonicParsing="false" onAction="#onBackButton" text="Back" />
-      <TextField fx:id="ssnTextField" layoutX="83.0" layoutY="24.0" promptText="Employee SSN" />
-      <TextField fx:id="employeeFirstNameTextField" layoutX="83.0" layoutY="65.0" promptText="First name" />
-      <TextField fx:id="employeeMidNameTextField" layoutX="83.0" layoutY="107.0" promptText="Middle name" />
-      <TextField fx:id="employeeLastNameTextField" layoutX="83.0" layoutY="150.0" promptText="Last name" />
-      <DatePicker fx:id="employeeFDOBDateField" layoutX="83.0" layoutY="195.0" promptText="Date of birth" />
-      <TextField fx:id="employeeStreetTextField" layoutX="83.0" layoutY="242.0" prefHeight="25.0" prefWidth="167.0" promptText="Street" />
-      <TextField fx:id="employeeStreetNoTextField" layoutX="260.0" layoutY="242.0" prefHeight="25.0" prefWidth="41.0" promptText="NO" />
-      <TextField fx:id="employeeZipCodeTextField" layoutX="83.0" layoutY="282.0" prefHeight="25.0" prefWidth="58.0" promptText="Zip" />
-      <TextField fx:id="employeeCityTextField" layoutX="152.0" layoutY="282.0" promptText="City" />
-      <TextField fx:id="contactFirstNameTextField" layoutX="372.0" layoutY="44.0" promptText="FIrst name" />
-      <TextField fx:id="contactLastNameTextField" layoutX="372.0" layoutY="87.0" promptText="Last name" />
-      <TextField fx:id="contactPhoneTextField" layoutX="372.0" layoutY="130.0" promptText="Phone number" />
-      <Label layoutX="372.0" layoutY="16.0" text="Emergency contact data" />
-      <TextField fx:id="employeeEducationTextField" layoutX="372.0" layoutY="189.0" promptText="Education" />
-      <TextField fx:id="employeeSecExpTextField" layoutX="372.0" layoutY="231.0" promptText="Specialization/Experience" />
-      <Label layoutX="372.0" layoutY="162.0" text="Employment data" />
-      <ComboBox fx:id="employeeWardComboBox" layoutX="83.0" layoutY="322.0" prefHeight="25.0" prefWidth="211.0" promptText="Assign to ward" />
-      <TextField fx:id="usernameTextField" layoutX="372.0" layoutY="270.0" promptText="Email" />
-      <TextField fx:id="passwordTextField" layoutX="372.0" layoutY="310.0" promptText="Password" />
-      <Separator layoutX="369.0" layoutY="158.0" prefHeight="4.0" prefWidth="157.0" />
+      <Button layoutX="183.0" layoutY="447.0" mnemonicParsing="false" onAction="#onSaveButtonEmployee" prefHeight="26.0" prefWidth="56.0" text="Save" />
+      <Button layoutX="107.0" layoutY="447.0" mnemonicParsing="false" onAction="#onClearButtonEmployee" prefHeight="26.0" prefWidth="56.0" text="Clear" />
+      <Button layoutX="36.0" layoutY="447.0" mnemonicParsing="false" onAction="#onBackButtonEmployee" prefHeight="26.0" prefWidth="56.0" text="Back" />
+      <TextField fx:id="employeeSSNTextField" layoutX="32.0" layoutY="31.0" prefHeight="26.0" prefWidth="174.0" promptText="Employee SSN" />
+      <TextField fx:id="employeeFirstNameTextField" layoutX="33.0" layoutY="71.0" prefHeight="26.0" prefWidth="174.0" promptText="First name" />
+      <TextField fx:id="employeeMidNameTextField" layoutX="33.0" layoutY="111.0" prefHeight="26.0" prefWidth="174.0" promptText="Middle name" />
+      <TextField fx:id="employeeLastNameTextField" layoutX="34.0" layoutY="150.0" prefHeight="26.0" prefWidth="174.0" promptText="Last name" />
+      <DatePicker fx:id="employeeDOBDateField" layoutX="35.0" layoutY="191.0" prefHeight="26.0" prefWidth="174.0" promptText="Date of birth" />
+      <TextField fx:id="employeeStreetTextField" layoutX="32.0" layoutY="296.0" prefHeight="26.0" prefWidth="174.0" promptText="Street" />
+      <TextField fx:id="employeeStreetNoTextField" layoutX="240.0" layoutY="296.0" prefHeight="26.0" prefWidth="50.0" promptText="NO" />
+      <TextField fx:id="employeeZipCodeTextField" layoutX="240.0" layoutY="335.0" prefHeight="26.0" prefWidth="50.0" promptText="Zip" />
+      <TextField fx:id="employeeCityTextField" layoutX="31.0" layoutY="335.0" prefHeight="26.0" prefWidth="174.0" promptText="City" />
+      <Label layoutX="484.0" layoutY="8.0" text="Emergency contact :" />
+      <Label layoutX="235.0" layoutY="8.0" text="Experience/Specialization:" />
+      <ComboBox fx:id="employeeWardComboBox" layoutX="483.0" layoutY="384.0" prefHeight="26.0" prefWidth="200.0" promptText="Assign employee to ward" />
+      <TextField fx:id="usernameTextField" layoutX="484.0" layoutY="296.0" prefHeight="26.0" prefWidth="200.0" promptText="Email" />
+      <TextField fx:id="passwordTextField" layoutX="484.0" layoutY="335.0" prefHeight="26.0" prefWidth="200.0" promptText="Password" />
+      <Label layoutX="34.0" layoutY="8.0" text="Employee data:" />
+      <Label layoutX="36.0" layoutY="261.0" text="Employee address:" />
+      <Label layoutX="484.0" layoutY="261.0" text="Login info:" />
+      <AnchorPane layoutX="485.0" layoutY="31.0" prefHeight="187.0" prefWidth="200.0" style="-fx-background-color: #f8f8ff; -fx-background-radius: 0.5em;">
+         <effect>
+            <DropShadow color="#413a3a" />
+         </effect>
+         <children>
+            <TextField fx:id="employeeEContactFNameTextField" layoutX="14.0" layoutY="23.0" prefHeight="26.0" prefWidth="174.0" promptText="FIrst name" />
+            <TextField fx:id="employeeEContactLNameTextField" layoutX="14.0" layoutY="74.0" prefHeight="26.0" prefWidth="174.0" promptText="Last name" />
+            <TextField fx:id="employeeEContactPhoneTextField" layoutX="13.0" layoutY="116.0" prefHeight="26.0" prefWidth="174.0" promptText="Phone number" />
+         </children>
+      </AnchorPane>
+      <TextArea fx:id="employeeExperienceTextArea" layoutX="235.0" layoutY="33.0" prefHeight="76.0" prefWidth="200.0" style="-fx-background-color: #f8f8ff;" />
+      <TextArea fx:id="employeeEducationTextArea" layoutX="235.0" layoutY="144.0" prefHeight="76.0" prefWidth="200.0" style="-fx-background-color: #f8f8ff;" />
+      <Label layoutX="235.0" layoutY="119.0" text="Employee education:" />
    </children>
 </AnchorPane>
