--- a/src/client/view/doctor/DoctorPatientsView.fxml
+++ b/src/client/view/doctor/DoctorPatientsView.fxml
@@ -22,7 +22,7 @@
          </font>
       </Label>
       <Button fx:id="doctorViewTreatButton" layoutX="246.0" layoutY="361.0" mnemonicParsing="false" onAction="#onTreatButton" text="Treat" />
-      <Button fx:id="doctorViewAddSampleButton" layoutX="335.0" layoutY="361.0" mnemonicParsing="false" onAction="#onAddSample" text="Add/Edit sample" />
+      <Button fx:id="doctorViewAddEditSampleButton" layoutX="335.0" layoutY="361.0" mnemonicParsing="false" onAction="#onAddEditSample" text="Add/Edit sample" />
       <Button fx:id="doctorViewDiagnoseButton" layoutX="467.0" layoutY="361.0" mnemonicParsing="false" onAction="#onDiagnoseButton" text="Diagnose" />
       <Button fx:id="doctorViewEditMedicalDescription" layoutX="45.0" layoutY="361.0" mnemonicParsing="false" onAction="#onEditMedicalDescription" text="Edit medical description" />
    </children>
