--- a/src/client/view/doctor/AssignNurseView.fxml
+++ b/src/client/view/doctor/AssignNurseView.fxml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.AssignNurseViewController">
    <children>
-      <Label layoutX="77.0" layoutY="40.0" text="Available nurses">
+      <Label layoutX="56.0" layoutY="40.0" text="Available nurses">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TableView fx:id="nursesTable" layoutX="62.0" layoutY="73.0" prefHeight="214.0" prefWidth="475.0">
+      <TableView fx:id="nursesTable" layoutX="56.0" layoutY="157.0" prefHeight="214.0" prefWidth="475.0">
         <columns>
           <TableColumn fx:id="nurseFirstName" prefWidth="81.0" text="First name" />
           <TableColumn fx:id="nurseLastName" prefWidth="84.0" text="Last name" />
@@ -24,6 +24,8 @@
             <TableColumn fx:id="nurseExperience" prefWidth="110.0" text="Experience" />
         </columns>
       </TableView>
-      <Button fx:id="assignButton" layoutX="391.0" layoutY="338.0" mnemonicParsing="false" onAction="#onAssignButton" text="Assign nurse in your ward" />
+      <Button fx:id="assignButton" layoutX="463.0" layoutY="71.0" mnemonicParsing="false" onAction="#onAssignButton" text="Assign nurse" />
+      <ComboBox fx:id="availableNursesComboBox" layoutX="62.0" layoutY="67.0" prefHeight="33.0" prefWidth="337.0" />
+      <Label layoutX="56.0" layoutY="125.0" text="Nurses assigned to me:" />
    </children>
 </AnchorPane>
