--- a/src/client/view/login/LoginView.fxml
+++ b/src/client/view/login/LoginView.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.LoginViewController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.login.LoginViewController">
    <children>
       <Label layoutX="170.0" layoutY="185.0" text="Username:" />
       <Label layoutX="170.0" layoutY="233.0" text="Password:" />
