--- a/src/client/view/manager/AddEditEmployeeView.fxml
+++ b/src/client/view/manager/AddEditEmployeeView.fxml
@@ -1,15 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
-
-<AnchorPane prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #90a4ae;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.manager_view.AddEditEmployeeViewController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #90a4ae;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.manager.AddEditEmployeeViewController">
    <children>
       <Button layoutX="183.0" layoutY="447.0" mnemonicParsing="false" onAction="#onSaveButtonEmployee" prefHeight="26.0" prefWidth="56.0" text="Save" />
       <Button layoutX="107.0" layoutY="447.0" mnemonicParsing="false" onAction="#onClearButtonEmployee" prefHeight="26.0" prefWidth="56.0" text="Clear" />
