--- a/src/client/view/manager/AddEditWardView.fxml
+++ b/src/client/view/manager/AddEditWardView.fxml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.manager_view.AddEditWardViewController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.manager.AddEditWardViewController">
     <Button layoutX="530.0" layoutY="355.0" mnemonicParsing="false" onAction="#onSaveButton" text="Save" />
     <Button layoutX="466.0" layoutY="355.0" mnemonicParsing="false" onAction="#onClearButton" text="Clear" />
     <Button layoutX="22.0" layoutY="361.0" mnemonicParsing="false" onAction="#onBackButton" text="Back" />
