--- a/src/client/view/manager/EmployeeView.fxml
+++ b/src/client/view/manager/EmployeeView.fxml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
-
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.manager_view.EmployeeViewController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.manager.EmployeeViewController">
    <children>
       <ComboBox fx:id="employeeTypeComboBox" layoutX="23.0" layoutY="24.0" prefHeight="25.0" prefWidth="105.0" promptText="Select type" />
       <Button layoutX="23.0" layoutY="99.0" mnemonicParsing="false" onAction="#onAddEmployeeButton" prefHeight="25.0" prefWidth="59.0" text="Add" />
