--- a/src/client/view/manager/MangerSideBar.fxml
+++ b/src/client/view/manager/MangerSideBar.fxml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
-
-
-<AnchorPane prefHeight="500.0" prefWidth="170.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.manager_view.MangerSideBarControllerController">
+<AnchorPane prefHeight="500.0" prefWidth="170.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.manager.MangerSideBarControllerController">
    <children>
       <Button layoutX="33.0" layoutY="200.0" mnemonicParsing="false" onAction="#employeeMenuButton" text="Employees Menu" />
       <Button layoutX="39.0" layoutY="452.0" mnemonicParsing="false" onAction="#logoutButton" prefHeight="25.0" prefWidth="94.0" text="Logout" />
