--- a/src/client/view/manager/WardView.fxml
+++ b/src/client/view/manager/WardView.fxml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.manager_view.WardViewController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.manager.WardViewController">
     <children>
         <Button layoutX="23.0" layoutY="99.0" mnemonicParsing="false" onAction="#onAddWardButton" prefHeight="25.0" prefWidth="59.0" text="Add" />
         <Button layoutX="23.0" layoutY="144.0" mnemonicParsing="false" onAction="#onEditWardButton" prefHeight="25.0" prefWidth="59.0" text="Edit" />
