--- a/src/client/view/nurse/SeeAllAppointmentsAndPatients.fxml
+++ b/src/client/view/nurse/SeeAllAppointmentsAndPatients.fxml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+
+<?import javafx.scene.control.*?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-
-
-<AnchorPane prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #90a4ae;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.nurse_view.SeeAllAppointmentsAndPatientsController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #90a4ae;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.nurse.SeeAllAppointmentsAndPatientsController">
    <children>
       <TableView fx:id="appointmentsTableView" layoutY="42.0" prefHeight="328.0" prefWidth="700.0" style="-fx-background-radius: 0.5em;">
         <columns>
