After the login view we will open the main view of the appropriate user. .fxml files created. The views are still not done.

--- a/src/client/view/login/manager_mainView.fxml
+++ b/src/client/view/login/manager_mainView.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.BorderPane?>
 
 
-<BorderPane fx:id="mainBorderPane" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.login.MainViewController">
+<BorderPane fx:id="mainBorderPane" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.login.ManagerMainViewController">
    <center>
       <ScrollPane fx:id="mainPane" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <content>
