changes to the doctors view. Eliza will make the designs match

--- a/src/client/view/doctor/AddEditSampleView.fxml
+++ b/src/client/view/doctor/AddEditSampleView.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.AddEditSampleViewController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.AddEditSampleViewController">
    <children>
       <TextField fx:id="result" layoutX="72.0" layoutY="261.0" promptText="Result" />
       <Label layoutX="286.0" layoutY="24.0" text="Sample">
@@ -20,5 +20,7 @@
       <ComboBox fx:id="sampleType" layoutX="72.0" layoutY="74.0" prefWidth="150.0" promptText="Type" />
       <DatePicker fx:id="deadline" layoutX="72.0" layoutY="145.0" promptText="Deadline" />
       <ComboBox fx:id="priority" layoutX="72.0" layoutY="200.0" prefWidth="150.0" promptText="Priority" />
+      <Button layoutX="384.0" layoutY="337.0" mnemonicParsing="false" onAction="#onBackButton" text="Back" />
+      <Button layoutX="300.0" layoutY="337.0" mnemonicParsing="false" onAction="#onClearButton" text="Clear" />
    </children>
 </AnchorPane>
