--- a/src/client/view/doctor/AppointmentsView.fxml
+++ b/src/client/view/doctor/AppointmentsView.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.AppointmentsViewController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.AppointmentsViewController">
    <children>
       <Label layoutX="240.0" layoutY="39.0" text="Appointments">
          <font>
@@ -20,5 +21,6 @@
             <TableColumn fx:id="patientSSN" prefWidth="186.0" text="SSN" />
         </columns>
       </TableView>
+      <Button layoutX="490.0" layoutY="390.0" mnemonicParsing="false" onAction="#onBackButton" text="Back" />
    </children>
 </AnchorPane>
