--- a/src/client/view/doctor/DoctorAddEditSampleView.fxml
+++ b/src/client/view/doctor/DoctorAddEditSampleView.fxml
@@ -6,8 +6,7 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.DoctorAddEditSampleViewController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.DoctorAddEditSampleViewController">
    <children>
       <Label layoutX="66.0" layoutY="30.0" text="Samples:" />
       <TableView fx:id="sampleTable" layoutX="38.0" layoutY="61.0" prefHeight="257.0" prefWidth="501.0">
@@ -20,5 +19,7 @@
       </TableView>
       <Button fx:id="addSampleButton" layoutX="383.0" layoutY="346.0" mnemonicParsing="false" onAction="#onAddButton" text="Add" />
       <Button fx:id="editSampleButton" layoutX="475.0" layoutY="346.0" mnemonicParsing="false" onAction="#onEditSampleButton" text="Edit" />
+      <Button layoutX="289.0" layoutY="346.0" mnemonicParsing="false" text="Clear" />
+      <Button layoutX="40.0" layoutY="359.0" mnemonicParsing="false" onAction="#onBackButton" text="Back" />
    </children>
 </AnchorPane>
