--- a/src/client/view/doctor/DoctorEditMedicalDescription.fxml
+++ b/src/client/view/doctor/DoctorEditMedicalDescription.fxml
@@ -6,8 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.DoctorEditMedicalDescriptionController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.DoctorEditMedicalDescriptionController">
    <children>
       <Label fx:id="patientTitleLabel" layoutX="264.0" layoutY="14.0" text="Patient">
          <font>
@@ -41,5 +40,7 @@
       <Label layoutX="391.0" layoutY="59.0" text="Medical description" />
       <TextArea fx:id="medicalDescriptionTextArea" layoutX="304.0" layoutY="83.0" prefHeight="177.0" prefWidth="277.0" />
       <Button fx:id="addButton" layoutX="495.0" layoutY="345.0" mnemonicParsing="false" onAction="#onAddButton" text="Add" />
+      <Button layoutX="377.0" layoutY="345.0" mnemonicParsing="false" onAction="#onBackButton" text="Back" />
+      <Button layoutX="429.0" layoutY="345.0" mnemonicParsing="false" onAction="#onClearButton" text="Clear" />
    </children>
 </AnchorPane>
