--- a/src/client/view/manager/AddEditEmployeeView.fxml
+++ b/src/client/view/manager/AddEditEmployeeView.fxml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #90a4ae;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.manager.AddEditEmployeeViewController">
+
+<AnchorPane prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #90a4ae;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.manager.AddEditEmployeeViewController">
    <children>
       <Button layoutX="183.0" layoutY="447.0" mnemonicParsing="false" onAction="#onSaveButtonEmployee" prefHeight="26.0" prefWidth="56.0" text="Save" />
       <Button layoutX="107.0" layoutY="447.0" mnemonicParsing="false" onAction="#onClearButtonEmployee" prefHeight="26.0" prefWidth="56.0" text="Clear" />
@@ -19,7 +25,7 @@
       <TextField fx:id="employeeCityTextField" layoutX="31.0" layoutY="335.0" prefHeight="26.0" prefWidth="174.0" promptText="City" />
       <Label layoutX="484.0" layoutY="8.0" text="Emergency contact :" />
       <Label layoutX="235.0" layoutY="8.0" text="Experience/Specialization:" />
-      <ComboBox fx:id="employeeWardComboBox" layoutX="483.0" layoutY="384.0" prefHeight="26.0" prefWidth="200.0" promptText="Assign employee to ward" />
+      <ComboBox fx:id="employeeWardComboBox" layoutX="484.0" layoutY="378.0" prefHeight="26.0" prefWidth="200.0" promptText="Assign doctor to ward" />
       <TextField fx:id="usernameTextField" layoutX="484.0" layoutY="296.0" prefHeight="26.0" prefWidth="200.0" promptText="Email" />
       <TextField fx:id="passwordTextField" layoutX="484.0" layoutY="335.0" prefHeight="26.0" prefWidth="200.0" promptText="Password" />
       <Label layoutX="34.0" layoutY="8.0" text="Employee data:" />
