--- a/src/client/view/login/manager_mainView.fxml
+++ b/src/client/view/login/manager_mainView.fxml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 
 
-<BorderPane fx:id="mainBorderPane" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.login.ManagerMainViewController">
-   <center>
-      <ScrollPane fx:id="mainPane" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-        </content>
-      </ScrollPane>
-   </center>
-</BorderPane>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.login.ManagerMainViewController">
+   <children>
+      <Button layoutX="159.0" layoutY="111.0" mnemonicParsing="false" onAction="#onEmployeeButton" text="Employees" />
+      <Button layoutX="382.0" layoutY="111.0" mnemonicParsing="false" onAction="#onWardsButton" text="Wards" />
+      <Button layoutX="273.0" layoutY="247.0" mnemonicParsing="false" onAction="#onLogoutButton" text="Logout" />
+      <Label layoutX="99.0" layoutY="78.0" text="Logged in as: " />
+      <Label fx:id="loggedInAsLabel" layoutX="182.0" layoutY="78.0" text="Label" />
+   </children>
+</AnchorPane>
