Names of doctor views edited. Easier for the enums

--- a/src/client/view/doctor/AddDiagnose.fxml
+++ b/src/client/view/doctor/AddDiagnose.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.DoctorAddDiagnoseController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.AddDiagnoseController">
    <children>
       <Label layoutX="263.0" layoutY="45.0" text="New diagnose">
          <font>
