--- a/src/client/view/doctor/PatientsView.fxml
+++ b/src/client/view/doctor/PatientsView.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.DoctorPatientsViewController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.PatientsViewController">
    <children>
       <TableView fx:id="doctorViewPatientTable" layoutX="17.0" layoutY="42.0" prefHeight="306.0" prefWidth="544.0">
         <columns>
