--- a/src/client/view/doctor/TreatPatientView.fxml
+++ b/src/client/view/doctor/TreatPatientView.fxml
@@ -12,7 +12,7 @@
 <AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.TreatPatientViewController">
    <children>
       <TextField fx:id="medicationTextField" layoutX="34.0" layoutY="245.0" prefHeight="25.0" prefWidth="172.0" promptText="Medication" />
-      <Label fx:id="selectDiagnosisLabel" layoutX="67.0" layoutY="39.0" text="Select diagnosis">
+      <Label layoutX="67.0" layoutY="39.0" text="Select diagnosis">
          <font>
             <Font size="14.0" />
          </font>
@@ -24,7 +24,7 @@
             <TableColumn fx:id="diagnosisDescription" prefWidth="184.0" text="Description" />
         </columns>
       </TableView>
-      <Button fx:id="addMedicationButton" layoutX="525.0" layoutY="327.0" mnemonicParsing="false" onAction="#onAddButton" text="Add" />
+      <Button layoutX="525.0" layoutY="327.0" mnemonicParsing="false" onAction="#onAddButton" text="Add" />
       <TextArea fx:id="descriptionTextArea" layoutX="33.0" layoutY="280.0" prefHeight="85.0" prefWidth="354.0" promptText="Description" wrapText="true" />
       <Button layoutX="426.0" layoutY="327.0" mnemonicParsing="false" onAction="#onBackButton" text="Back" />
       <Button layoutX="471.0" layoutY="327.0" mnemonicParsing="false" onAction="#onClearButton" text="Clear" />
