--- a/src/client/view/doctor/EditMedicalDescriptionView.fxml
+++ b/src/client/view/doctor/EditMedicalDescriptionView.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.EditMedicalDescriptionViewController">
    <children>
-      <Label fx:id="patientTitleLabel" layoutX="264.0" layoutY="14.0" text="Patient">
+      <Label layoutX="264.0" layoutY="14.0" text="Patient">
          <font>
             <Font size="18.0" />
          </font>
@@ -39,7 +39,7 @@
       <Label fx:id="contactTelNo" layoutX="375.0" layoutY="308.0" text="Label" />
       <Label layoutX="391.0" layoutY="59.0" text="Medical description" />
       <TextArea fx:id="medicalDescriptionTextArea" layoutX="304.0" layoutY="83.0" prefHeight="177.0" prefWidth="277.0" />
-      <Button fx:id="addButton" layoutX="495.0" layoutY="345.0" mnemonicParsing="false" onAction="#onAddButton" text="Add" />
+      <Button layoutX="495.0" layoutY="345.0" mnemonicParsing="false" onAction="#onAddButton" text="Add" />
       <Button layoutX="377.0" layoutY="345.0" mnemonicParsing="false" onAction="#onBackButton" text="Back" />
       <Button layoutX="429.0" layoutY="345.0" mnemonicParsing="false" onAction="#onClearButton" text="Clear" />
    </children>
