--- a/src/client/view/nurse/AllAppointmentsView.fxml
+++ b/src/client/view/nurse/AllAppointmentsView.fxml
@@ -24,14 +24,13 @@
             <DropShadow color="#413a3a" />
          </effect>
       </TableView>
-      <Button layoutX="396.0" layoutY="433.0" mnemonicParsing="false" onAction="#onRemoveAppointment" text="Remove appointment" />
+      <Button layoutX="396.0" layoutY="433.0" mnemonicParsing="false" onAction="#onRemoveButton" text="Remove appointment" />
       <Label graphicTextGap="6.0" layoutX="295.0" layoutY="8.0" text="Appointments:" wrapText="true">
          <font>
             <Font size="17.0" />
          </font>
       </Label>
-      <Button layoutX="14.0" layoutY="432.0" mnemonicParsing="false" onAction="#onBackAppointments" prefHeight="26.0" prefWidth="46.0" text="Back" />
-      <Button layoutX="545.0" layoutY="431.0" mnemonicParsing="false" onAction="#onConfirmChangesApp" prefHeight="26.0" prefWidth="131.0" text="Confirm changes" />
+      <Button layoutX="14.0" layoutY="432.0" mnemonicParsing="false" onAction="#onBackButton" prefHeight="26.0" prefWidth="46.0" text="Back" />
    </children>
    <effect>
       <ColorAdjust contrast="0.09" />
