--- a/src/client/view/doctor/AssignNurseView.fxml
+++ b/src/client/view/doctor/AssignNurseView.fxml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.AssignNurseViewController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.AssignNurseViewController">
    <children>
       <Label layoutX="77.0" layoutY="40.0" text="Available nurses">
          <font>
@@ -21,7 +18,7 @@
             <TableColumn fx:id="availableNurseSSN" prefWidth="75.0" text="SSN" />
         </columns>
       </TableView>
-      <Button layoutX="391.0" layoutY="338.0" mnemonicParsing="false" onAction="#onAssignButton" text="Assign nurse in your ward" />
+      <Button layoutX="391.0" layoutY="338.0" mnemonicParsing="false" onAction="#onAssignButton" text="Assign Nurse" />
       <Button layoutX="312.0" layoutY="338.0" mnemonicParsing="false" onAction="#onBackButton" text="Back" />
       <TableView fx:id="assignedNurseTable" layoutX="403.0" layoutY="73.0" prefHeight="241.0" prefWidth="279.0">
         <columns>
