--- a/src/client/view/nurse/AddPatientView.fxml
+++ b/src/client/view/nurse/AddPatientView.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #90a4ae;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.nurse.AddPatientViewController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #90a4ae;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.nurse.AddPatientViewController">
    <children>
       <TextField fx:id="firstNameTxtFieldPatient" layoutX="15.0" layoutY="84.0" prefHeight="26.0" prefWidth="211.0" promptText="First name" />
       <TextField fx:id="mNameTxtFieldPatient" layoutX="15.0" layoutY="124.0" prefHeight="26.0" prefWidth="211.0" promptText="Middle name" />
@@ -35,14 +35,13 @@
       <TextField fx:id="bloodTypeTxtFieldPatient" layoutX="150.0" layoutY="237.0" prefHeight="26.0" prefWidth="78.0" promptText="Blood type" />
       <Label layoutX="19.0" layoutY="12.0" text="Patient data:" />
       <TextField fx:id="ssnTextFieldPatient" layoutX="16.0" layoutY="45.0" prefHeight="26.0" prefWidth="211.0" promptText="Patient SSN" AnchorPane.bottomAnchor="429.0" AnchorPane.leftAnchor="16.0" AnchorPane.rightAnchor="473.0" AnchorPane.topAnchor="45.0" />
-      <TextArea fx:id="medicalDescryNurseToPatientTxtArea" layoutX="322.0" layoutY="241.0" prefHeight="194.0" prefWidth="366.0" promptText="Medical description..." style="-fx-background-color: #f8f8ff; -fx-background-radius: 0.5em;">
+      <TextArea fx:id="medicalDescryNurseToPatientTxtArea" layoutX="322.0" layoutY="241.0" prefHeight="194.0" prefWidth="366.0" promptText="Medical description..." style="-fx-background-color: #f8f8ff; -fx-background-radius: 0.5em;" wrapText="true">
          <effect>
             <DropShadow color="#33557f" radius="14.75" width="40.0" />
          </effect>
       </TextArea>
       <Button layoutX="18.0" layoutY="452.0" mnemonicParsing="false" onAction="#onBackButtonAddPatient" prefHeight="26.0" prefWidth="58.0" style="-fx-border-color: #90a4ae;" text="Back" />
       <Button layoutX="94.0" layoutY="452.0" mnemonicParsing="false" onAction="#onClearButtonAddPatient" prefHeight="26.0" prefWidth="58.0" text="Clear" />
-      <Button layoutX="556.0" layoutY="457.0" mnemonicParsing="false" onAction="#onMakeAppointmentAddPatient" text="Make appointment ➜ " />
       <Button layoutX="175.0" layoutY="452.0" mnemonicParsing="false" onAction="#onSaveButtonAddPatient" prefHeight="26.0" prefWidth="58.0" text="Save" />
    </children>
    <effect>
