Added functionality to display number of doctors upcoming appointments.

--- a/src/client/view/login/DoctorMainView.fxml
+++ b/src/client/view/login/DoctorMainView.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #33557f;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.login.DoctorMainViewController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #33557f;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.login.DoctorMainViewController">
    <children>
       <Button layoutX="516.0" layoutY="412.0" mnemonicParsing="false" onAction="#onLogoutButton" prefHeight="30.0" prefWidth="100.0" text="Logout" AnchorPane.bottomAnchor="57.6" AnchorPane.leftAnchor="515.0" AnchorPane.rightAnchor="85.0" />
       <Button layoutX="515.0" layoutY="202.0" mnemonicParsing="false" onAction="#onAppointmentButton" prefHeight="30.0" prefWidth="100.0" text="Appointments" AnchorPane.leftAnchor="515.0" AnchorPane.rightAnchor="85.0" AnchorPane.topAnchor="202.0" />
@@ -25,6 +25,8 @@
          </effect>
       </ImageView>
       <Button layoutX="515.0" layoutY="303.0" mnemonicParsing="false" onAction="#onSamplesButton" prefHeight="30.0" prefWidth="100.0" text="Samples" />
+      <Label layoutX="442.0" layoutY="98.0" prefHeight="17.0" prefWidth="142.0" text="Number Of Appointments:" textFill="WHITE" />
+      <Label fx:id="nrOfAppointments" layoutX="584.0" layoutY="98.0" text="Label" textFill="WHITE" />
    </children>
    <effect>
       <ColorAdjust brightness="-0.08" contrast="-0.08" />
