--- a/src/client/view/nurse/MakeAppointmentView.fxml
+++ b/src/client/view/nurse/MakeAppointmentView.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.nurse.MakeAppointmentViewController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.nurse.MakeAppointmentViewController">
    <children>
       <AnchorPane layoutY="-2.0" prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #90a4ae;">
          <children>
@@ -24,7 +24,7 @@
                   <DropShadow color="#33557f" radius="14.75" width="40.0" />
                </effect>
             </TableView>
-            <Button layoutX="543.0" layoutY="413.0" mnemonicParsing="false" onAction="#onEditPatientButton" prefHeight="26.0" prefWidth="142.0" text="Edit patient info      ➜" />
+            <Button layoutX="542.0" layoutY="417.0" mnemonicParsing="false" onAction="#onEditPatientButton" prefHeight="26.0" prefWidth="143.0" text="Edit patient info      ➜" />
             <Button layoutX="141.0" layoutY="432.0" mnemonicParsing="false" onAction="#onSaveButton" text="Confirm" />
             <Button layoutX="16.0" layoutY="432.0" mnemonicParsing="false" onAction="#onBackButton" prefHeight="26.0" prefWidth="46.0" text="Back" />
             <TableView fx:id="doctorsTableViewMakeAppointment" layoutX="377.0" layoutY="31.0" prefHeight="294.0" prefWidth="322.0" style="-fx-background-color: #f8f8ff; -fx-background-radius: 0.5em;">
@@ -45,6 +45,7 @@
             <Button layoutX="75.0" layoutY="432.0" mnemonicParsing="false" onAction="#onClearButton" prefHeight="26.0" prefWidth="45.0" text="Clear" />
             <DatePicker fx:id="makeAppointmentDateField" layoutX="10.0" layoutY="362.0" />
             <Button layoutX="541.0" layoutY="458.0" mnemonicParsing="false" onAction="#onSeeAllAppointmentsButton" text="See all appointments ➜" />
+            <Button layoutX="541.0" layoutY="376.0" mnemonicParsing="false" onAction="#onRemovePatientButton" prefHeight="26.0" prefWidth="143.0" text="Remove patient      ➜" />
          </children>
          <effect>
             <ColorAdjust brightness="-0.06" contrast="0.07" />
